# vilolog

./: .gitignore  README.md  pyproject.toml  requirements.txt  vilolog.py
theme0/: footer.html  header.html  home.html
theme0/static/: styles.css
vilolog/: __init__.py  pageModel.py  userModel.py  utils.py  vilolog.py
vilolog/default-admin-theme/: admin-footer.html  admin-head-common.html  admin-header.html  login.html  page-editor.html  page-lister.html  reset.html  setup.html  user-editor.html  user-lister.html
vilolog/default-admin-theme/static/: admin-styles.css
vilolog/default-blog-theme/: 404.html  blog-head-common.html  home.html  page.html
vilolog/default-public-theme/: 404.html  home.html  page.html  public-head-common.html  public-header.html
vilolog/theme0/: 404.html  commonHead.html  footer.html  home.html  page.html
vilolog/theme0/static/: styles.css
